syntax = "proto3";

package errorx;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "pkg/errorxpb";
option (gogoproto.goproto_registration) = true;

// ErrorDetails are set for GRPC Status responses to provide extra context for
// conversion back to an errorx type.
message ErrorDetails {
  ErrorxType type = 1;

  // Reason is used by RequiresProxyRequest for logging.
  string Reason = 2;
}

// ErrorxType lists all of the errorx types that we have. The conversion
// function ignores the GRPC status type when doing the conversion.
enum ErrorxType {
  UNKNOWN = 0;
  INTERNAL = 1;
  BAD_REQUEST = 2;
  REQUIRES_PROXY_REQUEST = 3;
  RATE_LIMITED = 4;
  DISABLED = 5;
  UNIMPLEMENTED = 6;
  UNPROCESSABLE_ENTITY = 7;
  CONFLICT = 8;
  TOO_MANY_REQUESTS = 9;
  UNSUPPORTED_MEDIA_TYPE = 10;
}
